feat: establish Java and RuneLite standards documentation and update collections usage to Java 11 features